my-intel-simics-project-1/logs/test/win64/modules/dmlc/test/scratch/1.2/errors/ESYNTAX_version_broken/ESYNTAX_version_broken.dmlc_stderr
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_ESYNTAX_version_broken.dml:6:5: error ESYNTAX: syntax error: malformed DML version tag
